src/assets/scss/_recordset-table.scss
@use 'sass:map';
@use 'variables';

.recordset-table {
  overflow-y: hidden;
}

.chaise-table.table {
  border-top: 1px solid map-get(variables.$color-map, 'table-border');
  border-bottom: 1px solid map-get(variables.$color-map, 'table-border');
  margin: 0;

  tbody {
    display: table-row-group;
    vertical-align: middle;

    > tr > td.disabled-cell {
      background-color: map-get(variables.$color-map, 'table-disabled-background');
    }

    /* table hover */
    > tr:hover {
      // background-color: #f7f0cf !important;
      --bs-table-hover-bg: map-get(variables.$color-map, 'table-highlight-background') !important;

      /* match color from row highlight for disabled cells */
      > td.disabled-cell {
        background-color: map-get(variables.$color-map, 'table-highlight-background') !important;
        // --bs-table-hover-bg: #f7f0cf !important;;
      }

      .hover-show {
        visibility: visible;
      }
    }

    /* odd disabled cells need to be darker */
    > tr:nth-child(odd) > td.disabled-cell {
      background-color: map-get(variables.$color-map, 'table-striped-disabled-background');
    }

    /* odd row hover for striped table */
    > tr:nth-child(odd):hover {
      background-color: map-get(variables.$color-map, 'table-striped-highlight-background') !important;

      /* odd disabled cells need to match odd row hover for striped table above */
      > td.disabled-cell {
        background-color: map-get(variables.$color-map, 'table-striped-highlight-background') !important;
      }
    }
  }

  tr {
    border-left: 1px solid map-get(variables.$color-map, 'table-border');
    border-bottom: none;
  }

  .table-heading {
    background-color: map-get(variables.$color-map, 'table-header-background');
    color: map-get(variables.$color-map, 'black');

    .actions-header {
      width: 100px;

      &.view-header {
        width: 50px;
      }

      &.single-select-header {
        width: 65px;
      }

      &.multi-select-header {
        button {
          display: block;
          width: 120px;
          &:first-child {
            margin-bottom: 5px;
          }
        }
      }
    }
  }

  // override bootstrap default
  & > :not(:first-child) {
    border: 0;
  }

  & > tbody > tr {
    position: unset !important;
  }

  & > tbody > tr:nth-child(odd) {
    background: map-get(variables.$color-map, 'table-striped-background');
  }

  > thead > tr > th {
    border-bottom: 1px solid map-get(variables.$color-map, 'table-border');
    white-space: nowrap;
  }

  > thead > tr > th,
  > tbody > tr > th,
  > tfoot > tr > th,
  > thead > tr > td,
  > tbody > tr > td,
  > tfoot > tr > td {
    border-top: none;
    border-bottom: none;
    border-right: 1px solid map-get(variables.$color-map, 'table-border');
    word-wrap: break-word;
  }

  > tbody > tr > td {
    padding: 5px;
    vertical-align: top;
  }

  th {
    font-weight: 400;
    border-top: 1px solid map-get(variables.$color-map, 'table-border');
    position: relative;

    &.actions-header {
      white-space: nowrap;
      text-align: center;
      font-size: variables.$h4-font-size;
      padding: 8px;
    }

    .table-column-displayname {
      font-size: variables.$h4-font-size;
    }

    // preserve space for the icon on the right
    // 20 for the "icon space"
    // 10 for the "right indentation"
    padding-right: 30px;
    .table-heading-icons {
      position: absolute;
      bottom: 7px;
      right: 10px;
      font-size: variables.$h4-font-size;

      .table-column-spinner {
        position: absolute;
        bottom: 2px;
        right: -5px;

        .spinner-border {
          // NOTE: we should not customize the width/height since it causes wobbling effect
          color: map-get(variables.$color-map, 'table-header-spinner');
          border-width: .16em;
        }
      }
    }
  }

  // Changing the padding and adding line-height for the action button to align with the rest of the columns in the table
  .action-btns {
    $_space-around-buttons: 3px;

    text-align: center;
    font-size: 1.2rem;
    padding: $_space-around-buttons 0 0 0;
    line-height: 1.5;

    /**
     * make sure there's similar space below the buttons in the narrow case (when the content is just one line
     * I needed to use three different selectors for our three different modes.
     * the first one is the default mode, the second is single select and third is multi select
     */
    .chaise-btn-group, .chaise-btn.select-action-button, .chaise-checkbox {
      margin-bottom: $_space-around-buttons;
    }

    .chaise-btn {
      padding: 0;
      margin: -3px;
      height: auto; //override the default button height
      min-height: 25px; // make sure the button has default height
    }

    // reducing the font-size to make the alignment of view-details better with other action buttons
    .chaise-view-details {
      font-size: 1em;
    }

    .disabled {
      cursor: not-allowed;
      color: map-get(variables.$color-map, 'disabled');
    }

    .delete-loader {
      color: map-get(variables.$color-map, 'disabled');
    }
  }

  .full-col-span-row {
    text-align: center;
  }
}

.chaise-table-footer {
  text-align: center;
  margin-top: 10px;
}

.chaise-table-pagination {
  padding: 20px 0 50px 0;
  text-align: center;
  button {
    width: 75px;
    margin-left: 5px;
  }
}

